--- a/app/src/assets/styles/custom/_reset.scss
+++ b/app/src/assets/styles/custom/_reset.scss
@@ -1,3 +1,7 @@
+:root {
+  --bs-font-sans-serif: "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 * {
   box-sizing: border-box;
 }
