feat: dynamic resolution

--- a/app/src/app/modules/templates/general-template/general-template.component.html
+++ b/app/src/app/modules/templates/general-template/general-template.component.html
@@ -1,12 +1,15 @@
-<div id="template" class="template template-general">
-  <img class="template__image" [src]="merch.file">
+<div
+  id="template"
+  class="template template-general"
+  [ngStyle]="{width: resolution.width, height: resolution.height}">
+  <img class="template__image" [src]="data.file">
   <img
     [class]="'template__brand ' + logoLabelPositionStyle"
     src="./assets/logo-rounded.png">
-  <div class="template__identification" *ngIf="merch.id">
-    <span class="identification-value">#{{merch.id}}</span>
+  <div class="template__identification" *ngIf="data.id">
+    <span class="identification-value">#{{data.id}}</span>
   </div>
-  <div *ngIf="merch.whatsappFilter" class="whatsapp-filter">
+  <div *ngIf="data.whatsappFilter" class="whatsapp-filter">
     <img src="./assets/whatsapp-filter.png">
   </div>
 </div>
