--- a/app/src/app/views/editor/components/jacket-editor/jacket-editor.component.html
+++ b/app/src/app/views/editor/components/jacket-editor/jacket-editor.component.html
@@ -33,7 +33,7 @@
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
         <mat-label>Talla</mat-label>
-        <input formControlName="sizes" matInput>
+        <input formControlName="size" matInput>
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
         <mat-label>Descripción de talla</mat-label>
