--- a/app/src/app/views/editor/components/shoes-editor/shoes-editor.component.html
+++ b/app/src/app/views/editor/components/shoes-editor/shoes-editor.component.html
@@ -33,7 +33,7 @@
       </mat-form-field>
       <mat-form-field class="form-control mb-16" appearance="outline">
         <mat-label>Talla americana (US)</mat-label>
-        <input formControlName="sizes" matInput>
+        <input formControlName="size" matInput>
         <mat-hint>La talla mexicana (MX) se agrega automáticamente</mat-hint>
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
