--- a/app/src/app/modules/templates/jacket-template/jacket-template.component.scss
+++ b/app/src/app/modules/templates/jacket-template/jacket-template.component.scss
@@ -1,8 +1,8 @@
 .jacket-template__info {
-  --common-primary-font-size: 30px;
-  --common-info-padding: 8px;
+  --common-primary-font-size: 0.20em;
+  --common-info-padding: 3%;
   --common-info-margin-top: 0;
-  --common-info-margin-bot: 8px;
+  --common-info-margin-bot: 3%;
 
   top: var(--common-edge-margin);
 }
