--- a/app/src/app/views/downloder/downloder.component.scss
+++ b/app/src/app/views/downloder/downloder.component.scss
@@ -23,3 +23,7 @@
   font-weight: bold;
   color: mat.get-color-from-palette(mat.$green-palette, 500);
 }
+
+.new-download-method {
+  margin-top: 16px;
+}
