--- a/app/src/app/views/editor/components/accessory-editor/accessory-editor.component.html
+++ b/app/src/app/views/editor/components/accessory-editor/accessory-editor.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-title>
-    EDITOR CAMISA
+    EDITOR ACCESORIO
   </mat-card-title>
   <mat-card-content>
     <form class="form" [formGroup]="editor.form">
@@ -32,12 +32,12 @@
         </mat-select>
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
-        <mat-label>Talla</mat-label>
-        <input formControlName="size" matInput>
+        <mat-label>Cantidad</mat-label>
+        <input formControlName="quantity" matInput>
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
-        <mat-label>Descripción de talla</mat-label>
-        <input formControlName="sizeDescription" matInput>
+        <mat-label>Descripción</mat-label>
+        <input formControlName="quantityDescription" matInput>
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
         <mat-label>Precio</mat-label>
