--- a/app/src/app/views/editor/components/jacket-editor/jacket-editor.component.html
+++ b/app/src/app/views/editor/components/jacket-editor/jacket-editor.component.html
@@ -41,11 +41,11 @@
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
         <mat-label>Precio</mat-label>
-        <input formControlName="price" matInput type="number" inputmode="numeric">
+        <input formControlName="price" matInput>
       </mat-form-field>
       <mat-form-field class="form-control" appearance="outline">
         <mat-label>Precio de oferta</mat-label>
-        <input formControlName="offerPrice" matInput type="number" inputmode="numeric">
+        <input formControlName="offerPrice" matInput>
       </mat-form-field>
       <div class="form-control-toggle">
         <mat-slide-toggle formControlName="whatsappFilter">
