--- a/app/src/app/modules/templates/shoes-template/shoes-template.component.scss
+++ b/app/src/app/modules/templates/shoes-template/shoes-template.component.scss
@@ -2,7 +2,7 @@
   position: absolute;
   display: flex;
   justify-content: center;
-  top: 9%;
+  top: 8%;
   left: 0;
   width: 100%;
   z-index: var(--common-info-z-index);
@@ -18,36 +18,40 @@
     color: #fff;
     background-color: var(--common-info-bgc);
     border-radius: var(--common-info-border-radius);
-    padding: var(--common-info-padding);
+    padding: 2%;
     margin-top: var(--common-info-margin-top);
     margin-bottom: var(--common-info-margin-bot);
 
     .title {
       display: block;
+      font-size: var(--common-primary-font-size);
     }
 
     .value {
       display: block;
+      font-size: var(--common-primary-font-size);
     }
   }
 
   .info__size {
-    margin-right: 8px;
+    max-width: 24%;
+    margin-right: 1%;
 
     .size__title {
+      display: block;
       font-size: var(--common-primary-font-size);
     }
 
     .size__value {
       display: block;
-      font-size: 28px;
+      font-size:  var(--common-secondary-font-size);
     }
   }
 
   .info__price {
     color: #fff;
     background-color: var(--common-price-bgc);
-    margin-right: 8px;
+    margin-right: 1%;
 
     .value {
       white-space: nowrap;
